name:                dependent-rbtree
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/farrellm/dependent-rbtree#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Farrell
maintainer:          farrellm@alum.mit.edu
copyright:           2015 Matthew Farrell
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Page2
                     , Page3
                     , Page4.Page4
                     , Page4.Types
                     , Page5.RBTree
                     , Page5.Types
  ghc-options:         -W
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , type-natural
  default-language:    Haskell2010

executable dependent-rbtree-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W
  build-depends:       base
                     , dependent-rbtree
  default-language:    Haskell2010

test-suite dependent-rbtree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dependent-rbtree
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/farrellm/dependent-rbtree
